# _ml

./: README.md
hw/: hw1.py  hw2.py
hw/fin/: Langgraph_Agent.ipynb  README.md  app.py  download.py  mcp-server.py  movie_cut.py  readcontent.py  test_part_1.mp3.srt  test_part_2.mp3.srt  test_part_3.mp3.srt  test_part_4.mp3.srt
hw/hw10/: README.md  hw10.py
hw/hw11/: README.md  classifier.md  classifier.py  cluster.py  data.csv  knn_classifier.py  linear.py
hw/hw12/: hw12.ipynb
hw/hw14/: hw14.py
hw/hw2/: hillClimbing.py  hw2.py
hw/hw4/: README.md  hw4.py  pytorch.py
hw/hw6/micrograd/: engine.py
hw/hw7/: hw7.py
hw/hw7/micrograd/: engine.py
hw/hw8/: hw8.py
hw/hw9/: README.md
hw/mid/: Whisper.py  main.py  pyproject.toml
hw/mid/static/: chat.html  script.js  style.css
